# OpenRooms

./: LICENSE
client/: index.html  jsconfig.json  package.json
signaling_server/: go.mod
webrtc_server/: .env  Cargo.toml  build.rs
webrtc_server/proto/: connection.proto  rooms.proto
webrtc_server/src/: lib.rs  main.rs  sfu.rs
